[package]
name = "abughalib-github"
version = "0.1.0"
authors = ["abugh <abugh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = ""
serde = "1.0.125"
env_logger = "0.8.3"
serde_json = "1.0.64"
futures = "0.3.13"
json = "0.12.4"