[package]
name = "abughalib-github"
version = "0.1.0"
authors = ["abugh <abugh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "2.5.0"
serde = "1.0.125"
env_logger = "0.9.0"
serde_json = "1.0.64"
futures = "0.3.13"
json = "0.12.4"
dotenv = "0.15"