[package]
name = "abughalib-github"
version = "0.2.0"
authors = ["abugh <abugh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.5"
actix-cors = "0.6"
diesel = {version = "1.4.8", features = ["sqlite"]}
serde = {version = "1.0", features = ["derive"]}
env_logger = "0.9"
serde_json = "1.0"
futures = "0.3"
json = "0.12"
dotenv = "0.15"
mongodb = {version = "2.2", default-features = false, features = ["async-std-runtime"]}
tokio = "1.20"